apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.kennyandries.com
spec:
  ingressClassName: traefik-system-traefik
  rules:
    - host: immich.kennyandries.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  name: http
